# flower-shop-naming

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  item_naming_cli.py  notion_client.py  pyproject.toml  requirements.txt  setup.py
